# fastpysgi

./: LICENSE  MANIFEST.in  README.md  clean_install.sh  example.py  fastpysgi.py  fastwsgi.py  pyproject.toml  setup.py  setup_libuv.py  wsgi_example.py
.github/workflows/: deploy.yml  tests.yml
fastwsgi/: asgi.c  asgi.h  common.c  common.h  constants.c  constants.h  fastwsgimodule.c  libssl.c  libssl.h  lifespan.c  lifespan.h  logx.c  pyhacks.c  pyhacks.h  request.c  request.h  server.c  server.h  start_response.c  start_response.h  tls.c  tls.h  version.h  xbuf.h
tests/: conftest.py  test_cli.py
tests/apps_under_test/: start_response_test_app.py
